remove unused classes + basic setup with coordinator and product seems to work + adding netwrok buffer size options + simplifying coordinator and vms event handler inheritance